--- a/kubernetes/deploy.yaml
+++ b/kubernetes/deploy.yaml
@@ -64,13 +64,14 @@ metadata:
   namespace: portfolio
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /
     # nginx.ingress.kubernetes.io/ssl-redirect: "false"
     # Add these annotations if you want SSL
     # cert-manager.io/cluster-issuer: letsencrypt-prod
     # nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   rules:
-  - host: portfolio.example.com  # Replace with your domain
+  - host:
     http:
       paths:
       - path: /
